[package]
name = "svix-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
awc = { version = "3.1.1", features = ["rustls"] }
chrono = { version = "0.4.24", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "*", features = [ "runtime-actix-rustls", "postgres", "chrono", "macros" ] }
